# ratatui-jvm

./: README.md
java/Ratatui-JVM/: .gitignore  build.gradle.kts  settings.gradle.kts
java/Ratatui-JVM/src/main/java/org/ratatui/: Main.java  Terminal.java
jextract/: .gitignore  setup.ps1  setup.sh
rust/: Cargo.toml  bindings.h  build.rs
rust/src/: global.rs  lib.rs  terminal.rs
