[package]
name = "ratatui-jvm"
version = "0.1.0"
edition = "2021"

[dependencies]

[build-dependencies]
cbindgen = "0.26.0"

[lib]
name = "ratatui_jvm"
crate-type = ["cdylib"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
# opt-level = "z"   # Optimize for binary size
strip = true # Remove debug symbols
